My Forum and Hidden List

--- a/app/src/main/res/layout/fragment_main_forum.xml
+++ b/app/src/main/res/layout/fragment_main_forum.xml
@@ -231,18 +231,7 @@
         android:id="@+id/bottom_sheet_main"
         layout="@layout/bottom_sheet_category" />
 
-    <FrameLayout
+    <include
         android:id="@+id/frame_loading_main_forum"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/blackPalette"
-        android:visibility="gone">
-
-        <com.developers.coolprogressviews.CircleWithArcProgress
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:arcColor="@color/blue_palette"
-            app:circleColor="@color/royal_blue_palette"
-            app:radius1="30dp" />
-    </FrameLayout>
+        layout="@layout/custom_loading_black" />
 </android.support.design.widget.CoordinatorLayout>
