--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -32,6 +32,20 @@
                     android:layout_height="100dp"
                     android:layout_centerInParent="true"
                     android:background="@drawable/add_img_transparent" />
+
+                <TextView
+                    android:id="@+id/text_error_catalog"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/image_new_catalog"
+                    android:layout_centerHorizontal="true"
+                    android:drawableStart="@drawable/ic_warning"
+                    android:fontFamily="@font/sniglet_font"
+                    android:gravity="center_vertical"
+                    android:padding="10dp"
+                    android:text="Should choose an image!"
+                    android:textColor="@color/blackPalette"
+                    android:visibility="gone" />
             </RelativeLayout>
 
             <LinearLayout
