Information Store Profile

--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -74,7 +74,7 @@
                     android:backgroundTint="@color/blackPalette"
                     android:fontFamily="@font/sniglet_font"
                     android:hint="contoh: Minyak Goreng 1L"
-                    android:inputType="text"
+                    android:inputType="textPersonName|textNoSuggestions"
                     android:maxLines="1"
                     android:paddingStart="10dp"
                     android:paddingEnd="5dp"
@@ -144,7 +144,6 @@
                     android:inputType="textMultiLine|textNoSuggestions"
                     android:maxEms="160"
                     android:maxLength="160"
-                    android:maxLines="4"
                     android:paddingStart="10dp"
                     android:paddingEnd="5dp"
                     android:textColor="@color/blackPalette"
