--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,14 +27,13 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_height="50dp"
         android:layout_gravity="bottom"
         android:background="@color/blue_palette"
         app:itemIconSize="20dp"
         app:itemIconTint="@drawable/bottom_nav_color"
         app:itemTextColor="@drawable/bottom_nav_color"
         app:labelVisibilityMode="labeled"
-        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
         app:menu="@menu/bottom_navigation" />
+    <!--app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"-->
 </android.support.design.widget.CoordinatorLayout>
