Implement mission feature

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,4 +49,6 @@
     <color name="gull_gray_palette">#a0a6ba</color>
     <color name="antique_brass_palette">#cd8b62</color>
     <color name="gallery_palette">#eeeeee</color>
+    <color name="cognac_palette">#aa461a</color>
+    <color name="gold_palette">#d4af37</color>
 </resources>
