--- a/app/src/main/res/layout/fragment_loyalty.xml
+++ b/app/src/main/res/layout/fragment_loyalty.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white_color"
     tools:context=".ui.loyalty.LoyaltyFragment">
 
+    <include
+        android:id="@+id/toolbar_back_loyalty_fragment"
+        layout="@layout/toolbar_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_below="@id/toolbar_back_loyalty_fragment"
+        android:background="@color/silver_palette" />
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
+        android:layout_below="@id/toolbar_back_loyalty_fragment"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="50dp"
+        android:overScrollMode="never"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
-            <include
-                android:id="@+id/toolbar_back_loyalty_fragment"
-                layout="@layout/toolbar_back"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="6dp"
-                android:background="@color/silver_palette" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -122,6 +129,36 @@
                 android:fontFamily="@font/sniglet_font"
                 android:textColor="@color/blackPalette" />
 
+            <ImageView
+                android:id="@+id/image_check_loyalty"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/ic_check_rounded_blue" />
+
+            <RelativeLayout
+                android:id="@+id/rl_dummy_00_loyalty"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/rectangle_rounded_stroke_blue"
+                android:padding="1dp">
+
+                <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+                    android:id="@+id/progress_loyalty"
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    app:rcBackgroundColor="@color/white_color"
+                    app:rcProgressColor="@color/blue_palette"
+                    app:rcRadius="5dp"
+                    app:rcReverse="false" />
+            </RelativeLayout>
+
             <TextView
                 android:id="@+id/text_rank_type_loyalty"
                 android:layout_width="wrap_content"
@@ -143,19 +180,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/sniglet_font"
-                android:text="Basic Merchant Benefit"
                 android:textColor="@color/blackPalette"
                 android:textSize="17sp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_benefit_loyalty"
                 android:layout_width="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
                 android:layout_height="wrap_content" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:alpha="0.1"
                 android:background="@color/blackPalette" />
 
@@ -211,4 +250,4 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
