--- a/app/src/main/res/layout/fragment_my_store_information.xml
+++ b/app/src/main/res/layout/fragment_my_store_information.xml
@@ -73,7 +73,7 @@
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical|end"
                     android:layout_marginStart="2dp"
-                    android:background="@drawable/ic_check_blue"
+                    android:background="@drawable/ic_check_rectangle_blue"
                     android:visibility="gone" />
 
                 <TextView
@@ -131,7 +131,7 @@
                     android:layout_gravity="center_vertical|end"
                     android:layout_marginStart="2dp"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/ic_check_blue"
+                    android:background="@drawable/ic_check_rectangle_blue"
                     android:visibility="gone" />
 
                 <TextView
@@ -189,7 +189,7 @@
                     android:layout_gravity="center_vertical|end"
                     android:layout_marginStart="2dp"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/ic_check_blue"
+                    android:background="@drawable/ic_check_rectangle_blue"
                     android:visibility="gone" />
 
                 <TextView
@@ -247,7 +247,7 @@
                     android:layout_gravity="center_vertical|end"
                     android:layout_marginStart="2dp"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/ic_check_blue"
+                    android:background="@drawable/ic_check_rectangle_blue"
                     android:visibility="gone" />
             </GridLayout>
 
@@ -279,7 +279,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginStart="5dp"
-                    android:background="@drawable/ic_check_blue"
+                    android:background="@drawable/ic_check_rectangle_blue"
                     android:visibility="gone" />
             </LinearLayout>
 
