--- a/app/src/main/res/layout/recycler_rank_type_loyalty.xml
+++ b/app/src/main/res/layout/recycler_rank_type_loyalty.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:id="@+id/recycler_relative_chosen_loyalty"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
     android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
-    android:background="@drawable/rectangle_rounded_stroke_blue">
+    android:layout_marginEnd="5dp">
 
-    <ImageView
-        android:id="@+id/recycler_rank_loyalty"
+    <RelativeLayout
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_centerInParent="true" />
-
-    <ImageView
-        android:id="@+id/recycler_rank_lock_loyalty"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/ic_lock"
-        android:visibility="gone" />
+        android:background="@drawable/rectangle_stroke_blue">
+
+        <ImageView
+            android:id="@+id/recycler_rank_loyalty"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true" />
+
+        <ImageView
+            android:id="@+id/recycler_rank_lock_loyalty"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/ic_lock"
+            android:visibility="gone" />
+    </RelativeLayout>
 </RelativeLayout>
