--- a/app/src/main/res/layout/recycler_mission_loyalty.xml
+++ b/app/src/main/res/layout/recycler_mission_loyalty.xml
@@ -73,6 +73,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:textColor="@color/blackPalette"
         android:layout_marginBottom="10dp"
         android:background="@drawable/rectangle_rounded_stroke_blue"
         android:fontFamily="@font/sniglet_font"
