--- a/app/src/main/res/layout/fragment_my_rewards.xml
+++ b/app/src/main/res/layout/fragment_my_rewards.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.loyalty.rewards.myrewards.MyRewardsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+    android:id="@+id/recycler_my_rewards"
+    tools:context=".ui.loyalty.rewards.myrewards.MyRewardsFragment" />
