--- a/app/src/main/res/layout/fragment_detail_rewards.xml
+++ b/app/src/main/res/layout/fragment_detail_rewards.xml
@@ -61,6 +61,7 @@
                 android:id="@+id/ll_dummy_00_detail_rewards"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_below="@id/text_title_detail_rewards"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
@@ -129,7 +130,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
+            android:fontFamily="@font/sniglet_font"
             android:layout_marginBottom="10dp"
+            android:visibility="gone"
             android:background="@drawable/background_reply"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -137,6 +140,74 @@
             android:textAlignment="center"
             android:textColor="@color/white_color"
             android:textSize="20sp" />
+
+        <LinearLayout
+            android:id="@+id/ll_dummy_01_detail_rewards"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/text_voucher_detail_rewards"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:fontFamily="@font/sniglet_font"
+                android:maxWidth="200dp"
+                android:text="Voucher code: xxxxxxxxxxxxxxx"
+                android:textColor="@color/blackPalette"
+                android:textSize="12sp" />
+
+            <ImageButton
+                android:id="@+id/img_btn_eye_detail_rewards"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/ic_closed_eye" />
+
+            <ImageButton
+                android:id="@+id/img_btn_copy_voucher_detail_rewards"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/ic_editor_copy" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_voucher_use_on_detail_rewards"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ll_dummy_01_detail_rewards"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/sniglet_font"
+            android:text="Voucher used on"
+            android:textColor="@color/blackPalette"
+            android:textSize="15sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/text_voucher_using_date_detail_rewards"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ll_dummy_01_detail_rewards"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/sniglet_font"
+            android:text="Friday, 15 Nov 2019 09:16 WIB"
+            android:textColor="@color/blackPalette"
+            android:textSize="15sp"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <include
